# terraform-provider-turing-pi-bmc

./: .checkov.yaml  .cruft.json  .envrc  .gitignore  .golangci.yml  .goreleaser.yml  .pre-commit-config.yaml  .prettierignore  .yamllint  CHANGELOG.md  LICENSE  README.md  Taskfile.yml  go.mod  go.sum  main.go  pyproject.toml  terraform-registry-manifest.json
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yaml  ci.yml
.tfsec/: config.yml
.trunk/: trunk.yaml
.trunk/configs/: .bandit  analyzers.yml
cmd/: README.md
deployment/: README.md  Taskfile.yml  main.tf  terraform.tfvars  variables.tf  versions.tf
docs/: index.md
docs/data-sources/: nodeinfo.md  power.md  scaffolding_example.md  sdcard.md  usb.md
docs/resources/: scaffolding_example.md  usb.md
examples/data-sources/nodeinfo/: data-source.tf
examples/data-sources/power/: data-source.tf
examples/data-sources/sdcard/: data-source.tf
examples/data-sources/usb/: data-source.tf
examples/provider/: provider.tf
examples/resources/usb/: resource.tf
internal/api/: client.go  error.go  model.go  nodeinfo.go  power.go  sdcard.go  usb.go
internal/provider/: all_test.go  constants.go  example_data_source.go  example_data_source_test.go  example_resource.go  example_resource_test.go  nodeinfo_data_source.go  nodeinfo_data_source_test.go  power_data_source.go  power_data_source_test.go  provider.go  provider_test.go  sdcard_data_source.go  sdcard_data_source_test.go  usb_data_source.go  usb_data_source_test.go  usb_resource.go  usb_resource_test.go
templates/: index.md.tmpl
templates/resources/: usb.md.tmpl
tools/: FE007B07F3DCB6D4.asc  Taskfile.yml  release.py
