[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
line-length = 128

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
update_changelog_on_bump = true
version = "0.0.4"
version_files = [
  "Taskfile.yml:TF_VERSION",
  "VERSION",
  "pyproject.toml:version",
]

[tool.poetry]
authors = ["Justin Lecher <justin@jlec.de>"]
description = "TF provider for Turing PI BMC"
license = "Apache-2.0"
name = "terraform_provider_turing_pi_bmc"
version = "0.0.4"

[tool.poetry.dependencies]
ansible = "^9.1.0"
molecule = "^6.0.3"
netaddr = "^1"
pytest-testinfra = "^10.0.0"
python = "~3.12"

[tool.poetry.extras]
molecule = ["ansible", "docker", "lint"]
pytest-testinfra = ["ansible", "docker", "local"]

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
commitizen = "^3.13.0"
cruft = "^2.15.0"
poetry = "^1.7.1"
pre-commit = "^3.6.0"
pytest = "^8.0.0"
pytest-clarity = "^1.0.1"
pytest-cookies = "^0"
pytest-parallel = "^0"
pytest-xdist = "^3.5.0"
pyyaml = "^6.0.1"
yamllint = "^1.33.0"

[tool.ruff]
exclude = ["obsolete"]
ignore = [
  "B008", # do not perform function calls in argument defaults
  "C901", # too complex
  "E501", # line too long, handled by black
]
line-length = 128
select = [
  "B", # flake8-bugbear
  # "I",  # isort
  "C", # flake8-comprehensions
  "E", # pycodestyle errors
  "F", # pyflakes
  "W", # pycodestyle warnings
]

[tool.ruff.per-file-ignores]
